# bfportal.gg

./: .dockerignore  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js  tox.ini
bfportal/: .env.template  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  nohup.out  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.yml  tailwind.config.js
bfportal/bf6/: admin.py  apps.py  tests.py  views.py
bfportal/bf6/management/commands/: mock_snippets.py
bfportal/bf6/migrations/: 0001_initial.py  0002_bf6homepage_delete_homepage.py  0003_scriptscategory_scriptslistingpage_snippetpage_and_more.py  0004_auto_20260707_1506.py  0005_snippetpage_code_snippetpage_exp_json.py
bfportal/bf6/models/: __init__.py  bf_experience_export.py  categories.py  home_page.py  test_bf_experience_export.py
bfportal/bf6/models/scripts_page/: listing_page.py  snippets.py
bfportal/bf6/templates/bf6/: base.html  footer.html  home_page.html  nav_item.html  navbar.html  scripts_listing_page.html
bfportal/bf6/templatetags/: string_filters.py
bfportal/bfportal/: excluded_path.py  robots.py  sitemaps.py  urls.py  wsgi.py
bfportal/bfportal/jstoolchain/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
bfportal/bfportal/settings/: base.py  dev.py  production.py
bfportal/bfportal/static/css/: .gitignore  main.css
bfportal/bfportal/static/js/: bfportal.js  color_filter.js  preload.js
bfportal/bfportal/static/src/: styles.css
bfportal/bfportal/templates/: 404.html  502.html  base.html  coming_soon.html  footer.html  navbar.html
bfportal/bfportal/templates/account/: logout.html
bfportal/bfportal/templates/socialaccount/: authentication_error.html  login.html
bfportal/core/: __init__.py  admin.py  api.py  apps.py  forms.py  helper.py  lookups.py  models.py  serializers.py  signal_recivers.py  views.py  wagtail_hooks.py
bfportal/core/api/: __init__.py  experience.py  users.py
bfportal/core/management/commands/: db.json  ensure_initialization.py  ensure_superuser.py  fix_img.py  import_db.py  mock.py  playground.py  portal.py  tasks.py  validate.py  validate_experiences.py
bfportal/core/migrations/: 0001_initial.py  0002_remove_indexpage_intro.py  0003_experiencepage.py  0004_auto_20220114_2241.py  0005_experiencesubmitpage.py  0006_delete_experiencesubmitpage.py  0007_auto_20220117_2314.py  0008_auto_20220117_2328.py  0009_experiencepage_tags.py  0010_auto_20220117_2339.py  0011_remove_experiencepage_core_experiencepage_code_or_exp_url.py  0012_profilepage.py  0013_experiencescategory.py  0014_experiencepage_categories.py  0015_auto_20220126_1230.py  0016_auto_20220127_1519.py  0017_auto_20220127_1533.py  0017_auto_20220127_1533_squashed_0033_auto_20220824_1633.py  0018_alter_experiencepage_categories.py  0019_availabletags.py  0020_alter_experiencepage_vid_url.py  0021_experiencepage_featured.py  0022_homepage_cover_image.py  0023_auto_20220303_1703.py  0024_auto_20220303_1706.py  0025_auto_20220303_1717.py  0026_auto_20220305_1703.py  0027_auto_20220305_1705.py  0028_blogpage.py  0029_alter_experiencepage_code.py  0030_experiencepage_first_publish.py  0031_alter_experiencepage_cover_img_url.py  0032_experiencepage_bugged.py  0033_auto_20220824_1633.py  0034_auto_20220824_1647.py  0035_alter_experiencepage_category.py  0036_alter_experiencepage_sub_categories.py  0037_alter_experiencepage_sub_categories.py  0038_experiencepage_favorites.py  0039_profile.py  (+49 more)
bfportal/core/models/: __init__.py  categories.py  experience.py  helper.py  pages.py  settings.py  users.py
bfportal/core/serializers/: __init__.py  category.py  experiences.py  users.py
bfportal/core/static/js/: autocomplete_helper.js  core_pagination.js  filters_helper.js  pagination.js
bfportal/core/templates/ajax_select/: autocompleteselectmultiple_DiscordUsers.html  autocompleteselectmultiple_tags.html  custom_base.html
bfportal/core/templates/core/: after_submit.html  discord-widget.html  edit_experience_page.html  experience_page.html  experiences_listing.html  experiences_page.html  home_page.html  index_page.html  pagination.html  profile_page.html  searchbar.html  submit_experience_page.html
bfportal/core/templates/markdownx/: widget.html
bfportal/core/templatetags/: template_filters.py
bfportal/core/utils/: helper.py
bfportal/factory/: apps.py
bfportal/factory/management/commands/: fake.py  playground.py
bfportal/static/: staticfiles.json
bfportal/static/images/: placeholder.avif
bfportal/static/js/: core_pagination.bdec5f613e89.js
bfportal/static/wagtailadmin/css/: core.a81a9b7b2b58.css  core.css  normalize.215626308aee.css  sidebar.12ffddb95b9c.css  sidebar.css  userbar.css  userbar.eb10a980adc0.css
bfportal/static/wagtailadmin/js/: bulk-actions.75ac02ab5073.js  bulk-actions.js.36e33f885fbb.map  collapsible.6d537e04ceef.js  collapsible.js.map  comments.cf6b5d5eb843.js  comments.js.7cf37b060004.map  core.d049a6fd00c3.js  core.js.9076459559a9.map  date-time-chooser.8179de43368a.js  date-time-chooser.js.map  draftail.js  draftail.js.0af939530849.map  expanding_formset.js  expanding_formset.js.map  filtered-select.98840a6f1a39.js  filtered-select.js.3248010da39f.map  hallo-bootstrap.07d83d3c7be5.js  hallo-bootstrap.js.fcd2bbfa0cef.map  lock-unlock-action.acabef8b0079.js  lock-unlock-action.js.map  (+28 more)
bfportal/theme/: apps.py
bfportal/theme/static_src/: package-lock.json  package.json  tailwind.config.js
(+45 files in other folders)
