[tool.poetry]
name = "bfportal-gg"
version = "1.4.0"
description = "Source Code of website at bfportal.gg"
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bfportal"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
anyascii = "0.3.0"
arrow = "1.2.2"
asgiref = "3.5.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
beautifulsoup4 = "4.9.3"
binaryornot = "0.4.4"
bleach = "5.0.1"
bpyutils = "0.2.0"
certifi = "2021.10.8"
cffi = "1.15.0"
cfgv = "3.3.1"
chardet = "4.0.0"
charset-normalizer = "2.0.12"
click = "8.0.3"
colorama = "0.4.4"
cookiecutter = "1.7.3"
cryptography = "36.0.1"
defusedxml = "0.7.1"
distlib = "0.3.5"
django = "3.2.12"
django-allauth = "0.48.0"
django-autocomplete-light = "3.9.1"
django-browser-reload = "1.3.0"
django-debug-toolbar = "3.2.4"
django-embed-video = "1.4.1"
django-extensions = "3.1.5"
django-filter = "21.1"
django-livereload-server = "0.4"
django-markdownx = "3.0.1"
django-modelcluster = "6.0"
django-permissionedforms = "0.1"
django-taggit = "3.0.0"
django-tailwind = "3.1.1"
django-treebeard = "4.5.1"
django-widget-tweaks = "1.4.12"
djangorestframework = "3.13.1"
docopt = "0.6.2"
draftjs-exporter = "2.1.7"
et-xmlfile = "1.1.0"
faker = "12.3.0"
filelock = "3.8.0"
frozenlist = "1.3.0"
html5lib = "1.1"
identify = "2.5.3"
idna = "3.3"
jinja2 = "3.0.3"
jinja2-time = "0.2.0"
l18n = "2021.3"
loguru = "0.6.0"
markdown = "3.3.4"
markupsafe = "2.0.1"
multidict = "6.0.2"
nodeenv = "1.7.0"
oauthlib = "3.2.0"
openpyxl = "3.0.9"
pillow = "8.4.0"
pipreqs = "0.4.11"
pipupgrade = "1.11.0"
platformdirs = "2.5.2"
poyo = "0.5.0"
pre-commit = "2.20.0"
psycopg2 = "2.9.3"
py-cord = "2.0.0b4"
pycparser = "2.21"
pyjwt = "2.3.0"
python-dateutil = "2.8.2"
python-dotenv = "0.19.2"
python-slugify = "5.0.2"
python3-openid = "3.2.0"
pytz = "2021.3"
pyyaml = "6.0"
requests = "2.27.1"
requests-oauthlib = "1.3.1"
six = "1.16.0"
soupsieve = "2.3.1"
sqlparse = "0.4.2"
tablib = "3.2.0"
telepath = "0.2"
text-unidecode = "1.3"
tinycss2 = "1.1.1"
toml = "0.10.2"
tornado = "6.1"
tzdata = "2021.5"
unidecode = "1.3.2"
urllib3 = "1.26.8"
virtualenv = "20.16.3"
wagtail = "4.0.2"
wagtail-color-panel = "1.3.1"
wagtail-generic-chooser = "0.4"
wagtailsvg = "0.0.33"
webencodings = "0.5.1"
whitenoise = "6.2.0"
willow = "1.4"
win32-setctime = "1.0.4"
xlrd = "2.0.1"
xlsxwriter = "3.0.2"
xlwt = "1.3.0"
yarg = "0.1.9"
yarl = "1.7.2"
django-ajax-selects = {git = "https://github.com/crucialfelix/django-ajax-selects.git"}
wagtail-autocomplete = {git = "https://github.com/wagtail/wagtail-autocomplete.git"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
